No bug: clean up a bunch of warnings in test code.